# pm_kvm_tools-1.0

./: .gitignore  .hgignore  Makefile.am  configure.ac  pm_kvm_tools.spec.in
conf/: Makefile.am  vm-connectd.conf.sample  vm-manager.conf
include/: Makefile.am  vm_connect.h
lib/: Makefile.am  vm_connect.c
plugins/: Makefile.am  vm-stonith
resources/: Makefile.am  VirtualDomain  vm-anything  vm-client
tools/: Makefile.am  vm-connect.c  vm-connectd.c  vm-managerd.c  vm-stonithd.c
